--- a/DPA.Store.API/appsettings.json
+++ b/DPA.Store.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DevConnection": "Server=LAPTOP-BRQCFKJQ;Database=StoreDB;Integrated,Security=True;TrustServerCertificate=True"
+    "DevConnection": "Server=LAPTOP-BRQCFKJQ;Database=StoreDB;Integrated Security=True;TrustServerCertificate=True"
   }
 }
